--- a/MagicVilla_VillaAPI/appsettings.json
+++ b/MagicVilla_VillaAPI/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultSQLConnection": "Data source=(localdb)\\MSSQLLocalDB; Initial Catalog=Magic_VillaAPI"
+  },
+  "ApiSettings": {
+    "Secret":  "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET"
   }
 }
